@@ -46,21 +46,25 @@ namespace BDArmory.FX
         public float dmgMult { get; set; }
         public float apMod { get; set; }
         public float travelDistance { get; set; }
+        bool isReportingWeapon = false;
 
         public Part projectileHitPart { get; set; }
         public float ImpactSpeed { get; set; } // For kinetic impactors.
         public float TimeIndex => Time.time - StartTime;
+
+        Dictionary<string, int> totalPartsHit = [];
+        Dictionary<string, float> totalDamageApplied = [];
 
         private bool disabled = true;
 
         float blastRange;
         const int explosionLayerMask = (int)(LayerMasks.Parts | LayerMasks.Scenery | LayerMasks.EVA | LayerMasks.Unknown19 | LayerMasks.Unknown23 | LayerMasks.Wheels); // Why 19 and 23?
 
-        Queue<BlastHitEvent> explosionEvents = new Queue<BlastHitEvent>();
-        List<BlastHitEvent> explosionEventsPreProcessing = new List<BlastHitEvent>();
-        List<Part> explosionEventsPartsAdded = new List<Part>();
-        List<DestructibleBuilding> explosionEventsBuildingAdded = new List<DestructibleBuilding>();
-        Dictionary<string, int> explosionEventsVesselsHit = new Dictionary<string, int>();
+        Queue<BlastHitEvent> explosionEvents = new();
+        List<BlastHitEvent> explosionEventsPreProcessing = [];
+        List<Part> explosionEventsPartsAdded = [];
+        List<DestructibleBuilding> explosionEventsBuildingAdded = [];
+        Dictionary<string, int> explosionEventsVesselsHit = [];
 
 
         static RaycastHit[] lineOfSightHits;
@@ -114,6 +118,8 @@ namespace BDArmory.FX
             disabled = false;
             MaxTime = BDAMath.Sqrt((Range / ExplosionVelocity) * 3f) * 2f; // Scale MaxTime to get a reasonable visualisation of the explosion.
             blastRange = warheadType == WarheadTypes.Standard ? Range * 2 : Range; //to properly account for shrapnel hits when compiling list of hit parts from the spherecast
+            totalPartsHit.Clear();
+            totalDamageApplied.Clear();
             if (!isFX)
             {
                 CalculateBlastEvents();
@@ -187,6 +193,8 @@ namespace BDArmory.FX
             explosionEventsPartsAdded.Clear();
             explosionEventsBuildingAdded.Clear();
             explosionEventsVesselsHit.Clear();
+            totalDamageApplied.Clear();
+            totalPartsHit.Clear();
         }
 
         private void CalculateBlastEvents()
@@ -286,12 +294,8 @@ namespace BDArmory.FX
                                                 break;
                                         }
                                         if (registered)
-                                        {
-                                            if (explosionEventsVesselsHit.ContainsKey(damagedVesselName))
-                                                ++explosionEventsVesselsHit[damagedVesselName];
-                                            else
-                                                explosionEventsVesselsHit[damagedVesselName] = 1;
-                                        }
+                                            explosionEventsVesselsHit[damagedVesselName] = explosionEventsVesselsHit.GetValueOrDefault(damagedVesselName) + 1;
+                                        totalPartsHit[damagedVesselName] = totalPartsHit.GetValueOrDefault(damagedVesselName) + 1; // Include non-competition craft (like debris).
                                     }
                                 }
                             }
@@ -352,17 +356,13 @@ namespace BDArmory.FX
                                                 registered = true;
                                             break;
                                         case ExplosionSourceType.Bullet:
-                                            if (travelDistance > 0)
+                                            if (isReportingWeapon)
                                                 registered = true;
                                             break;
                                     }
                                     if (registered)
-                                    {
-                                        if (explosionEventsVesselsHit.ContainsKey(damagedVesselName))
-                                            ++explosionEventsVesselsHit[damagedVesselName];
-                                        else
-                                            explosionEventsVesselsHit[damagedVesselName] = 1;
-                                    }
+                                        explosionEventsVesselsHit[damagedVesselName] = explosionEventsVesselsHit.GetValueOrDefault(damagedVesselName) + 1;
+                                    totalPartsHit[damagedVesselName] = totalPartsHit.GetValueOrDefault(damagedVesselName) + 1; // Include non-competition craft (like debris).
                                 }
                             }
                         }
@@ -401,32 +401,36 @@ namespace BDArmory.FX
             }
             if (explosionEventsVesselsHit.Count > 0)
             {
-                string message = "";
-                foreach (var vesselName in explosionEventsVesselsHit.Keys)
-                    //message += (message == "" ? "" : " and ") + vesselName + " had " + explosionEventsVesselsHit[vesselName];
-                    switch (ExplosionSource)
-                    {
-                        case ExplosionSourceType.Missile:
-                            message += (message == "" ? "" : " and ") + vesselName + " had " + explosionEventsVesselsHit[vesselName];
-                            message += " parts damaged due to missile strike";
-                            message += (SourceWeaponName != null ? $" ({SourceWeaponName})" : "") + (SourceVesselName != null ? $" from {SourceVesselName}" : "") + ".";
-                            break;
-                        case ExplosionSourceType.Bullet:
-                            message += (message == "" ? "" : " and ") + vesselName + " had " + explosionEventsVesselsHit[vesselName] + " parts damaged from";
-                            message += (SourceVesselName != null ? $" from {SourceVesselName}'s" : "") + (SourceWeaponName != null ? $" ({SourceWeaponName})" : "shell hit") + ($" at {travelDistance:F3}m") + ".";
-                            break;
-                        case ExplosionSourceType.Rocket:
-                            {
-                                if (travelDistance > 0)
+                if (!BDArmorySettings.REPORT_DAMAGE_NOT_PARTS_HIT)
+                {
+                    string message = "";
+                    foreach (var vesselName in explosionEventsVesselsHit.Keys)
+                        //message += (message == "" ? "" : " and ") + vesselName + " had " + explosionEventsVesselsHit[vesselName];
+                        switch (ExplosionSource)
+                        {
+                            case ExplosionSourceType.Missile:
+                                message += (message == "" ? "" : " and ") + vesselName + " had " + explosionEventsVesselsHit[vesselName];
+                                message += " parts damaged due to missile strike";
+                                message += (SourceWeaponName != null ? $" ({SourceWeaponName})" : "") + (SourceVesselName != null ? $" from {SourceVesselName}" : "") + ".";
+                                break;
+                            case ExplosionSourceType.Bullet:
+                                if (isReportingWeapon)
                                 {
                                     message += (message == "" ? "" : " and ") + vesselName + " had " + explosionEventsVesselsHit[vesselName] + " parts damaged from";
-                                    message += (SourceVesselName != null ? $" from {SourceVesselName}'s" : "") + (SourceWeaponName != null ? $" ({SourceWeaponName})" : "rocket hit") + ($" at {travelDistance:F3}m") + ".";
+                                    message += (SourceVesselName != null ? $" from {SourceVesselName}'s" : "") + (SourceWeaponName != null ? $" ({SourceWeaponName})" : " shell hit") + $" at {travelDistance:F3}m" + ".";
                                 }
                                 break;
-                            }
-                    }
-                if (!string.IsNullOrEmpty(message)) BDACompetitionMode.Instance.competitionStatus.Add(message);
-                // Note: damage hasn't actually been applied to the parts yet, just assigned as events, so we can't know if they survived.
+                            case ExplosionSourceType.Rocket:
+                                if (isReportingWeapon)
+                                {
+                                    message += (message == "" ? "" : " and ") + vesselName + " had " + explosionEventsVesselsHit[vesselName] + " parts damaged from";
+                                    message += (SourceVesselName != null ? $" from {SourceVesselName}'s" : "") + (SourceWeaponName != null ? $" ({SourceWeaponName})" : " rocket hit") + $" at {travelDistance:F3}m" + ".";
+                                }
+                                break;
+                        }
+                    if (!string.IsNullOrEmpty(message)) BDACompetitionMode.Instance.competitionStatus.Add(message);
+                    // Note: damage hasn't actually been applied to the parts yet, just assigned as events, so we can't know if they survived.
+                }
                 foreach (var vesselName in explosionEventsVesselsHit.Keys) // Note: sourceVesselName is already checked for being in the competition before damagedVesselName is added to explosionEventsVesselsHitByMissiles, so we don't need to check it here.
                 {
                     switch (ExplosionSource)
@@ -542,7 +546,7 @@ namespace BDArmory.FX
                 var partPosition = part.transform.position; //transition over to part.Collider.ClosestPoint(Position);? Test later
                 partRay = new Ray(Position, partPosition - Position);
             }
-            
+
 
             var hitCount = Physics.RaycastNonAlloc(partRay, lineOfSightHits, range, explosionLayerMask);
             if (hitCount == lineOfSightHits.Length) // If there's a whole bunch of stuff in the way (unlikely), then we need to increase the size of our hits buffer.
@@ -728,6 +732,46 @@ namespace BDArmory.FX
                 }
             }
 
+            // Do a separate check here for events being empty so we can report asap.
+            if (BDArmorySettings.REPORT_DAMAGE_NOT_PARTS_HIT && isReportingWeapon && explosionEvents.Count == 0 && totalDamageApplied.Count > 0)
+            {
+                // Debug.Log($"DEBUG dmg: {string.Join(", ", totalDamageApplied.Select(kvp => $"{kvp.Key}:{kvp.Value:0}"))}, parts: {string.Join(", ", totalPartsHit.Select(kvp => $"{kvp.Key}:{kvp.Value}"))}");
+                List<string> debrisNames = ["Debris", "Plane", "Ship", "Probe"]; // Any others?
+                foreach (var vesselName in totalDamageApplied.Keys.ToList()) // Merge debris and vessel hits. Note: if only debris is hit, they won't get merged — quit flogging a dead horse!
+                {
+                    foreach (var debrisName in debrisNames.Select(name => $"{vesselName} {name}"))
+                    {
+                        if (totalDamageApplied.ContainsKey(debrisName) || totalPartsHit.ContainsKey(debrisName))
+                        {
+                            totalDamageApplied[vesselName] = totalDamageApplied.GetValueOrDefault(vesselName) + totalDamageApplied.GetValueOrDefault(debrisName);
+                            totalDamageApplied.Remove(debrisName);
+                            totalPartsHit[vesselName] = totalPartsHit.GetValueOrDefault(vesselName) + totalPartsHit.GetValueOrDefault(debrisName);
+                            totalPartsHit.Remove(debrisName);
+                        }
+                    }
+                }
+                // Debug.Log($"DEBUG {SourceVesselName} damaged {string.Join(" and ", totalDamageApplied.Select(kvp => $"{kvp.Key} for {kvp.Value:0} ({totalPartsHit.GetValueOrDefault(kvp.Key)} parts)"))} with a {(
+                //         ExplosionSource switch
+                //         {
+                //             ExplosionSourceType.Bullet => "shell",
+                //             ExplosionSourceType.Rocket => "rocket",
+                //             _ => SourceWeaponName
+                //         }
+                //     )}{(travelDistance > 0 ? $" at {travelDistance:F3}m" : "")}.");
+                BDACompetitionMode.Instance.competitionStatus.Add(
+                    $"{SourceVesselName} damaged {string.Join(" and ", totalDamageApplied.Select(kvp => $"{kvp.Key} for {kvp.Value:0} ({totalPartsHit.GetValueOrDefault(kvp.Key)} parts)"))} with a {(
+                        ExplosionSource switch
+                        {
+                            ExplosionSourceType.Bullet => "shell",
+                            ExplosionSourceType.Rocket => "rocket",
+                            _ => SourceWeaponName
+                        }
+                    )}{(travelDistance > 0 ? $" at {travelDistance:F3}m" : "")}."
+                );
+                totalDamageApplied.Clear();
+                totalPartsHit.Clear();
+            }
+
             if (disabled && explosionEvents.Count == 0 && TimeIndex > MaxTime)
             {
                 if (BDArmorySettings.DEBUG_DAMAGE)
@@ -841,7 +885,7 @@ namespace BDArmory.FX
             var vesselMass = part.vessel.totalMass;
             if (vesselMass == 0) vesselMass = part.mass; // Sometimes if the root part is the only part of the vessel, then part.vessel.totalMass is 0, despite the part.mass not being 0.
             bool shapedEffect = (warheadType == WarheadTypes.ShapedCharge || warheadType == WarheadTypes.Kinetic || warheadType == WarheadTypes.ContinuousRod) && eventToExecute.withinAngleofEffect;
-
+            string vesselHit = part.vessel.GetName();
 
             if (BDArmorySettings.DEBUG_WEAPONS && shapedEffect)
             {
@@ -927,8 +971,9 @@ namespace BDArmory.FX
                             part.AddInstagibDamage();
                             //if (BDArmorySettings.DEBUG_LABELS) Debug.Log("[BDArmory.ExplosionFX]: applying instagib!");
                         }
-                        var RA = part.FindModuleImplementing<ModuleReactiveArmor>();
+                        totalDamageApplied[vesselHit] = totalDamageApplied.GetValueOrDefault(vesselHit); // Initialise damage to 0 so it still gets reported even if no damage gets through.
 
+                        var RA = part.FindModuleImplementing<ModuleReactiveArmor>();
                         if (RA != null && !RA.NXRA && (ExplosionSource == ExplosionSourceType.Bullet || ExplosionSource == ExplosionSourceType.Rocket) && (Caliber > RA.sensitivity && realDistance <= 0.1f)) //bullet/rocket hit
                         {
                             RA.UpdateSectionScales();
@@ -1049,6 +1094,7 @@ namespace BDArmory.FX
                                             _ => ExplosionVelocity //technically this should be the sum vector of the explosion vel (perpendicular to missile vel), and missile vel since the rods are physical projectiles that would be inheriting their parent's vel
                                         },
                                         ExplosionSource);
+                                    totalDamageApplied[vesselHit] += damage;
                                 }
 
                                 if (penetrationFactor > 1 && warheadType != WarheadTypes.Kinetic)
@@ -1056,6 +1102,7 @@ namespace BDArmory.FX
                                     if (blastInfo.Damage > 0)
                                     {
                                         damage += part.AddExplosiveDamage(shapedEffect ? 0.5f * (blastInfo.Damage + damageWithoutIntermediateParts) : blastInfo.Damage, Caliber, ExplosionSource, dmgMult);
+                                        totalDamageApplied[vesselHit] += damage;
                                     }
 
                                     if (float.IsNaN(damage)) Debug.LogError("DEBUG NaN damage!");
@@ -1075,6 +1122,7 @@ namespace BDArmory.FX
                                     else
                                     {
                                         damage = part.AddExplosiveDamage(blastInfo.Damage, Caliber, ExplosionSource, dmgMult);
+                                        totalDamageApplied[vesselHit] += damage;
                                         if (part == projectileHitPart && ProjectileUtils.IsArmorPart(part)) //deal armor damage to armor panel, since we didn't do that earlier
                                         {
                                             ProjectileUtils.CalculateExplosiveArmorDamage(part, blastInfo.TotalPressure, realDistance, SourceVesselName, eventToExecute.Hit, ExplosionSource, Range - realDistance);
@@ -1199,7 +1247,7 @@ namespace BDArmory.FX
                 {
                     direction = direction.normalized;
                     position = position - direction * 0.05f;
-                } 
+                }
             }
 
             GameObject newExplosion = explosionFXPools[explModelPath].GetPooledObject();
@@ -1244,13 +1292,11 @@ namespace BDArmory.FX
                     // by W. M. Evans. Jet is approximately 20% of the caliber.
 
                     eFx.apMod = apMod;
-                    eFx.travelDistance = distancetravelled;
                     break;
                 case WarheadTypes.Kinetic:
                     eFx.cosAngleOfEffect = Mathf.Cos(Mathf.Deg2Rad * 45f); // cos(45 degrees)
                     eFx.Caliber = caliber;
                     eFx.apMod = apMod;
-                    eFx.travelDistance = distancetravelled;
                     eFx.ImpactSpeed = (sourceVelocity - (Hitpart != null ? Hitpart.vessel.Velocity() : Vector3.zero)).magnitude;
                     break;
                 case WarheadTypes.Standard:
@@ -1261,6 +1307,8 @@ namespace BDArmory.FX
                     Debug.LogError($"[BDArmory.ExplosionFX]: Unhandled warheadType {eFx.warheadType}, defaulting to {WarheadTypes.Standard}.");
                     goto case WarheadTypes.Standard;
             }
+            eFx.isReportingWeapon = explosionSourceType == ExplosionSourceType.Missile || distancetravelled > 0;
+            eFx.travelDistance = distancetravelled; // Used for reporting weapons.
 
             switch (eFx.warheadType)
             {
