@@ -109,6 +109,7 @@ namespace BDArmory.Settings
         [BDAPersistentSettingsField] public static bool COMPETITION_CLOSE_SETTINGS_ON_COMPETITION_START = false; // Close the settings window when clicking the start competition button.
         [BDAPersistentSettingsField] public static bool AUTO_LOAD_TO_KSC = false;                      // Automatically load the last used save and go to the KSC.
         [BDAPersistentSettingsField] public static bool GENERATE_CLEAN_SAVE = false;                   // Use a clean save instead of the persistent one when loading to the KSC.
+        [BDAPersistentSettingsField] public static bool REPORT_DAMAGE_NOT_PARTS_HIT = true;           // Report damage to parts (including to debris) after explosions instead of parts hit. Incurs a 0.2-0.3s delay to messages.
         #endregion
 
         #region Debug Labels
@@ -412,12 +413,13 @@ namespace BDArmory.Settings
         [BDAPersistentSettingsField] public static float VENGEANCE_DELAY = 2.5f;
         [BDAPersistentSettingsField] public static float VENGEANCE_YIELD = 1.5f;
         #endregion
+
         #region GunGame
         [BDAPersistentSettingsField] public static bool GG_PERSISTANT_PROGRESSION = false;
         [BDAPersistentSettingsField] public static bool GG_CYCLE_LIST = false;
         //[BDAPersistentSettingsField] public static bool GG_ANNOUNCER = false;
-
         #endregion
+
         #region Tournament settings
         [BDAPersistentSettingsField] public static bool SHOW_TOURNAMENT_OPTIONS = false;           // Show tournament options.
         [BDAPersistentSettingsField] public static int TOURNAMENT_STYLE = 0;                       // Tournament Style (Random, N-choose-K, Gauntlet, etc.)
@@ -481,6 +483,7 @@ namespace BDArmory.Settings
         [BDAPersistentSettingsField] public static float SMOKE_DEFLECTION_FACTOR = 10f;
         [BDAPersistentSettingsField] public static int APS_THRESHOLD = 60;                           // Threshold caliber that APS will register for intercepting hostile shells/rockets
         #endregion
+
         #region ProjectShowdown Stuff
         [BDAPersistentSettingsField] public static bool COMP_CONVENIENCE_CHECKS = false;
         #endregion
